--- a/prob1_2024/bayes.html
+++ b/prob1_2024/bayes.html
@@ -291,8 +291,7 @@ $$
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 1:</b>&nbsp;Show that if $P(A|B)=P(A)$  then $A,B$  must be independent. Is the converse true?
  Be careful with the second part!</p>
 
@@ -300,8 +299,7 @@ $$
 
 <h2><a
 name="Multiplication rule">Multiplication rule</a></h2>
-
-<p>
+::<p>
 <b>EXERCISE 2:</b>&nbsp;
 Show that if $P(A)&gt;0$ then $P(A\cap B) = P(A)P(B|A).$
 </p>
@@ -467,8 +465,7 @@ continue like this.
  <p></p>
 This procedure is bound to terminate after a finite number of steps. The output will be a random sample from $A.$  
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 3:</b>&nbsp;How to choose between 5 friends with equal probability using only a fair die? The following R code 
 will give a hint.
 <font color="red">
@@ -545,8 +542,7 @@ $$P(A_k|B) = \frac{P(A_k)P(B|A)}{\sum_{i=1}^n P(A_i)P(B|A_i)}.$$
 </fieldset>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 4:</b>&nbsp;Look at the following diagram and write down the proof.
 <center>
 <table width="100%">
@@ -1018,8 +1014,7 @@ array $(3,2,3).$
 name="Problems for practice">Problems for practice</a></h1>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 5:</b>&nbsp;Is it true that $P(A|B)+P(A^c|B)=1?$  Is it true
 that $P(A|B)+P(A|B^c)=1?$
 <p><a
@@ -1027,8 +1022,7 @@ href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
 class="ans" id="lab1">Yes. Not necessarily.</div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 6:</b>&nbsp;"It is possible to have events $A,B$ such that $P(A|B)=1$
 but $P(B|A)\neq 1$" Disprove or provide an example.
 <p><a
@@ -1038,8 +1032,7 @@ class="ans" id="lab2">Take $B\subseteq A$ with $P(A\setminus B)&gt;0.$</div></p>
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 7:</b>&nbsp;"It is possible to have events $A,B$ such that $P(A|B)&gt;0.99$
 but $P(B|A) &lt; 0.01$" Disprove or provide an example to
 this statement.
@@ -1051,8 +1044,7 @@ experiment is to draw one element of $A$ with equal probabilities. </div></p>
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 8:</b>&nbsp;Let $u_{2n}$ denote the probability that a random path
 of length $2n$ starting from $(0,0)$ passes
 through $(2n,0).$ Also, let $u_0=1.$ Let $v_{2n}$
@@ -1072,8 +1064,7 @@ class="ans" id="lab4">Condition on the first time the path hits zero.</div></p>
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 9:</b>&nbsp;$P(A\cap B)&gt;0.$ Show that $P(A|B) = P(B|A)$ if and
 only if $P(A)=P(B).$
 <p><a
@@ -1083,8 +1074,7 @@ class="ans" id="lab5">Easy</div></p>
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 10:</b>&nbsp;Modern digital communication relies on transmitting 0's and 1's from one
 device to another. Suppose that device A transmits a 0 with
 probability 0.4 and a 1 with probability 0.6. The communication channel is
@@ -1101,8 +1091,7 @@ class="ans" id="lab6">$\frac{0.6\times0.95}{0.6\times0.95+0.4\times0.01}.$</div>
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 11:</b>&nbsp;A doctor diagnoses a disease correctly in 90% cases. If the diagnosis is
 wrong, the patient dies with probability 50%. Even for a correct diagnosis
 the patient dies in 10% cases. Given that a patient has died find the
@@ -1114,8 +1103,7 @@ class="ans" id="lab7">$\frac{0.9\times0.1}{0.9\times0.1+0.1\times0.5}.$</div></p
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 12:</b>&nbsp;Two fair dice are rolled. What is the conditional probability
 that at least one shows a 6 given that the dice show different
 numbers?
@@ -1130,8 +1118,7 @@ Then $P(A) = \frac{6\times 5}{6\times 6}$ and $P(A\cap B) =
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 13:</b>&nbsp;If two fair dice are rolled, what is the conditional
 probability that the first one shows 6 given that the sum
 of the outcomes of the dice is $i?$ Compute for all possible
@@ -1145,8 +1132,7 @@ the conditional probability is $\frac{1}{13-i}.$</div></p>
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 14:</b>&nbsp;Here is part of a Ludo board. 
 <center>
 <table width="100%">
@@ -1173,8 +1159,7 @@ class="ans" id="lab10">$p_4p_6 + p_5p_5+p_6p_4.$</div></p>
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 15:</b>&nbsp;Let $A_{n\times n} = ((p_{ij}))$ be a matrix where
 each $p_{ij}\geq 0$ and for each $i$ we have $\sum_j
 p_{ij}=1.$ (Such a matrix is called a <b>stochastic</b> matrix.)
@@ -1206,8 +1191,7 @@ class="ans" id="lab11">Proof</div></p>
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 16:</b>&nbsp;
 We have $N+1$ urns, labelled $0,1,...,N.$ The urn with
 label $k$ contains $k$ red and $N-k$ green
@@ -1223,8 +1207,7 @@ class="ans" id="lab12">$\frac{1^{n+1} + 2^{n+1} +\cdots + N^{n+1}}{N(1^n + 2^n +
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 17:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1241,8 +1224,7 @@ href="javascript:hideShow('lab13')"><b>Hint:</b></a><div
 class="ans" id="lab13">$\frac{6\times5\times9\times8}{15\times14\times13\times12}.$  Send to basic.</div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 18:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1271,8 +1253,7 @@ So the required conditional probability is again $\frac 12.$
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 19:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1294,8 +1275,7 @@ $
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 20:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1312,8 +1292,7 @@ href="javascript:hideShow('lab16')"><b>Hint:</b></a><div
 class="ans" id="lab16">$\frac 12.$</div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 21:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1335,8 +1314,7 @@ $P($ exactly 2 white and white from $A$$)=\frac 13\times\frac 23\times\frac 34+\
 <p></p>
 So the required conditional probability is $\frac{7}{11}.$ 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 22:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1358,8 +1336,7 @@ Hence the required probability is $\frac{11}{50}.$
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 23:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1377,8 +1354,7 @@ class="ans" id="lab19">
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 24:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1407,8 +1383,7 @@ $0.85p+0.15\times0.96 = 0.98.$
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 25:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1428,8 +1403,7 @@ class="ans" id="lab21">(a) $0.36\times0.22.$
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 26:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1454,8 +1428,7 @@ class="ans" id="lab22">
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 27:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1472,8 +1445,7 @@ href="javascript:hideShow('lab23')"><b>Hint:</b></a><div
 class="ans" id="lab23">(a) $\frac 25.$  (b) $\frac{2}{52}.$</div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 28:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1524,8 +1496,7 @@ Similarly for the other two conditional probabilities. The last conditional prob
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 29:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1549,8 +1520,7 @@ In (b) the black balls could occur in ${4 \choose 2} = 6$ ways among the 4 draws
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 30:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1581,8 +1551,7 @@ class="ans" id="lab26">
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 31:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1600,8 +1569,7 @@ class="ans" id="lab27">The first is more likely to give an over estimate, since 
  more likely to be selected. The second is better.</div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 32:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1631,8 +1599,7 @@ Here $|A|=4\times 51\times\cdots\times(51-19+1)$, $|A\cap B| = 1\times 3\times
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 33:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1649,8 +1616,7 @@ href="javascript:hideShow('lab29')"><b>Hint:</b></a><div
 class="ans" id="lab29"></div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 34:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1667,8 +1633,7 @@ href="javascript:hideShow('lab30')"><b>Hint:</b></a><div
 class="ans" id="lab30"></div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 35:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1685,8 +1650,7 @@ href="javascript:hideShow('lab31')"><b>Hint:</b></a><div
 class="ans" id="lab31"></div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 36:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1703,8 +1667,7 @@ href="javascript:hideShow('lab32')"><b>Hint:</b></a><div
 class="ans" id="lab32"></div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 37:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1721,8 +1684,7 @@ href="javascript:hideShow('lab33')"><b>Hint:</b></a><div
 class="ans" id="lab33"></div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 38:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1739,8 +1701,7 @@ href="javascript:hideShow('lab34')"><b>Hint:</b></a><div
 class="ans" id="lab34"></div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 39:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1757,8 +1718,7 @@ href="javascript:hideShow('lab35')"><b>Hint:</b></a><div
 class="ans" id="lab35"></div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 40:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1775,8 +1735,7 @@ href="javascript:hideShow('lab36')"><b>Hint:</b></a><div
 class="ans" id="lab36"></div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 41:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1793,8 +1752,7 @@ href="javascript:hideShow('lab37')"><b>Hint:</b></a><div
 class="ans" id="lab37"></div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 42:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1811,8 +1769,7 @@ href="javascript:hideShow('lab38')"><b>Hint:</b></a><div
 class="ans" id="lab38"></div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 43:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1829,8 +1786,7 @@ href="javascript:hideShow('lab39')"><b>Hint:</b></a><div
 class="ans" id="lab39"></div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 44:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1847,8 +1803,7 @@ href="javascript:hideShow('lab40')"><b>Hint:</b></a><div
 class="ans" id="lab40">9.</div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 45:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1859,14 +1814,26 @@ class="ans" id="lab40">9.</div></p>
 </tr>
 </table>
 </center>
-
+In other words, we have a random experiment that can output $1,2,...,m$  with probabilities
+ $p_1,...,p_m.$  The experiment is run $n$  times. What is the chance that the last
+ outcome is different from all the earlier ones? 
 <p><a
 href="javascript:hideShow('lab41')"><b>Hint:</b></a><div
-class="ans" id="lab41"></div></p>
+class="ans" id="lab41">
+Let $A$  be this event. Let $B_i$  be the event that the last coupon is of type $i.$  
+<p></p>
+Then $P(A) = \sum_{i=1}^m P(B_i)P(A|B_i).$
+<p></p>
+Now $P(B_i) = p_i.$  Also $A\cap B_i$  is the event that the $i$-th coupon does not show up among the first
+ $n-1$  draws, but shows up at the $n$-th draw. So $P(A\cap B_i) = (1-p_i)^{n-1} p_i.$  
+<p></p>
+So $P(A|B_i) = \frac{P(A\cap B_i)}{P(B_i)} = (1-p_i)^{n-1}.$
+<p></p>
+Hence $P(A) = \sum_{i=1}^m p_i (1-p_i)^{n-1}.$
+</div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 46:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1880,11 +1847,27 @@ class="ans" id="lab41"></div></p>
 
 <p><a
 href="javascript:hideShow('lab42')"><b>Hint:</b></a><div
-class="ans" id="lab42"></div></p>
+class="ans" id="lab42">
+(a) $2p(1-p).$
+<p></p>
+(b) $\binom{3}{1}p^2(1-p),$  because there are three such paths:
+<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/asym.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+
+<p></p>
+(c) $\frac 23,$  because out of the 3 (equally likely) outcomes, we are caring about only the first 2 here.
+</div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 47:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1898,11 +1881,29 @@ class="ans" id="lab42"></div></p>
 
 <p><a
 href="javascript:hideShow('lab43')"><b>Hint:</b></a><div
-class="ans" id="lab43"></div></p>
+class="ans" id="lab43">
+(a) The procedure may be modelled by this random experiment: toss the coin
+twice, report "Head" if the outcome is HT, report "Tail" if the outcome is TH, and report
+ "Failure" otherwise. Then we are to show that the conditional probability that the outcome is
+ "Head" given that it is not "Failure" is $\frac 12.$  
+<i>i.e.</i>, 
+$$\begin{eqnarray*}&amp; &amp; P(Head|\mbox{not }Failure)\\
+&amp; = &amp; \frac{P(Head \cap \mbox{not }Failure)}{P(\mbox{not }Failure}\\
+&amp; = &amp; \frac{P(HT)}{P(HT)+P(TH)}\\
+&amp; = &amp; \frac{p(1-p)}{p(1-p)+p(1-p)} = \frac 12,
+\end{eqnarray*}$$
+as required.
+<p></p>
+(b) The "simpler" procedure reports "Head" if the original outcome
+is $TH, TTH, TTTH,...$  
+<p></p>
+The probability is 
+$$(1-p)p + (1-p)^2p + (1-p)^3p+\cdots= (1-p)p \times \frac{1}{1-(1-p)} = 1-p,$$
+which may not equal $\frac 12.$
+</div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 48:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1924,8 +1925,7 @@ when it is off. This approach is better for complicated circuits.
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 49:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1952,8 +1952,7 @@ For any other $i$  we have $P(win|A_i) = p_i + (1-p_i-p_7)p_i + (1-p_i-p_7)^2p_i
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 50:</b>&nbsp;<center>
 <table width="100%">
 <tr>
@@ -1970,8 +1969,7 @@ href="javascript:hideShow('lab46')"><b>Hint:</b></a><div
 class="ans" id="lab46">Don't replace.</div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 51:</b>&nbsp;Let $a,b,c\in{\mathbb N}.$ Suppose that we start with $a$ red and $b$ green
 balls in an urn. We draw a ball at random, note its colour, replace it, and
 add $c$ more balls of that color. We continue this process
@@ -2004,8 +2002,7 @@ Now the result follows immediately.
 </div></p>
 
 </p>
-
-<p>
+::<p>
 <b>EXERCISE 52:</b>&nbsp;Same set up as in the last problem. Fix two natural
 numbers $m &lt; n.$ What is the probability that the ball
 drawn at stage $m$ is green and the ball drawn at
