--- a/prob1_2024/vit.html
+++ b/prob1_2024/vit.html
@@ -261,19 +261,13 @@ Thus, we are claiming that we cannot have a function $P$
 <p></p>
 
 <p></p>
- We shall provide  a quick proof of
+ We shall provide  a  proof of
 this here by contradiction. Let, if possible, there be such a
 function $P.$ We shall demonstrate a "bad" set $M$ for
 which $P(M)$ cannot be defined, contradicting the assumption
 that $P$ is defined for all subsets of $\Omega.$ 
 <p></p>
-So in this scenario, we have
-to leave out "bad" sets like this from $\ev.$ However, 
-all subsets that we shall ever need for practical purposes are
-still in $\ev.$ That is why, this technical point may safely
-be ignored during a first course on probability.
-<p></p>
-Now for the proof. Let's warm up first.
+We shall start with a bit of  warming up.
 <p></p>
 
 <h2><a
@@ -418,7 +412,7 @@ Hence we should learn the following terminology.
 <p></p>
  The modification will consist of an explicit specification of the "good" sets. In other words,
  instead of taking $P:{\mathcal P}(\Omega)\rightarrow[0,1],$  we shall now take $P:{\mathcal
- A}\rightarrow[0,1],$  where ${\mathcal F}\subseteq{\mathcal P}(\Omega)$  is the collection of all the
+ F}\rightarrow[0,1],$  where ${\mathcal F}\subseteq{\mathcal P}(\Omega)$  is the collection of all the
  "good" subsets of $\Omega.$  What properties should these "good" subsets have? Well, since
  we are not going to manipulate the events using set theory, ${\mathcal F}$   should naturally be closed under the set
  operations: union, intersection and complementation. Since we want to use axiom 3, we actually need ${\mathcal F}$ 
