--- a/prob1_2024/fluc.html
+++ b/prob1_2024/fluc.html
@@ -641,6 +641,8 @@ Hence the final answer is $N_{b-a,q-p}-N_{b-a,q-2h+p}.$
 How many paths are there from $(0,0)$ to $(10,4)$ that
 are strictly positive at all times $&gt;0?$
 <p></p>
+[Thanks to Krishnam Baregama for pointing out an inconsistency in the problem, which has now been corrected.]
+<p></p>
 <b>SOLUTION:</b>
 This is very similar to the exercise above (with $L$ given
 by the horizontal line at height $0$), except that we start
