--- a/prob1_2024/indep.html
+++ b/prob1_2024/indep.html
@@ -521,11 +521,11 @@ Then the event that this jury makes the correct decision is
 $(A\cap B\cap C^c)\cup(A\cap B^c\cap C)\cup(A^c\cap B\cap
 C)\cup(A\cap B\cap C).$
 <p></p>
-This is $\frac 12(p^2+2p(1-p)) = p-\frac 12p^2,$ which is
-clearly $&lt;p.$
+This is $\frac 12(p^2+2p(1-p) +p^2) = p.$ 
 <p></p>
-So the one man jury is more likely to reach the correct decision. 
+So both the jury are equally likely to reach the correct decision. 
 <p></p>
+[Thanks to Shounak Kar for correcting a mistake here.]
 </div></p>
 
 </p>
