--- a/prob1_2024/bayes.html
+++ b/prob1_2024/bayes.html
@@ -1186,7 +1186,17 @@ exactly $k$ moves is the $(i,j)$-th entry of the matrix $A^k.$
 
 <p><a
 href="javascript:hideShow('lab11')"><b>Hint:</b></a><div
-class="ans" id="lab11">Proof</div></p>
+class="ans" id="lab11">Use induction on $k$. Let $b_{ij}$  be the probability that we move from $i$ 
+ to $j$  in exactly $k-1$  steps. Then the theorem of total probability implies that the
+ probability of moving from $i$  to $j$  in exactly $k$  steps is 
+$$c_{j} = \sum_{r=1}^n b_{ir}a_{rj}.$$
+In other words, if you construct the matrices $B$  and $C,$  you have
+$$C = BA.$$
+The basis of induction is for $k=1.$  
+<p></p>
+By induction hypothesis $B = A^{k-1}.$  So the induction step is 
+$C = A^{k-1}A = A^k.$
+</div></p>
 
 </p>
 
@@ -1221,7 +1231,7 @@ class="ans" id="lab12">$\frac{1^{n+1} + 2^{n+1} +\cdots + N^{n+1}}{N(1^n + 2^n +
 
 <p><a
 href="javascript:hideShow('lab13')"><b>Hint:</b></a><div
-class="ans" id="lab13">$\frac{6\times5\times9\times8}{15\times14\times13\times12}.$  Send to basic.</div></p>
+class="ans" id="lab13">$\frac{6\times5\times9\times8}{15\times14\times13\times12}.$  </div></p>
 
 </p>
 ::<p>
@@ -1351,6 +1361,15 @@ Hence the required probability is $\frac{11}{50}.$
 <p><a
 href="javascript:hideShow('lab19')"><b>Hint:</b></a><div
 class="ans" id="lab19">
+Let $A=$  event that a randomly selected woman has ectopic pregnancy.
+<p></p>
+Let $B=$  she is a smoker. 
+<p></p>
+Given $P(A|B) = 2P(A|B^c) =2b$, say, where $b&gt;0.$  and $P(B) = 0.32.$  
+<p></p>
+Use Bayes theorem to get 
+$$P(B|A) = \frac{0.32\times2b}{0.32\times2b+0.68\times b}. $$
+Notice that $b&gt;0$  cancels out.
 </div></p>
 
 </p>
@@ -1613,7 +1632,16 @@ Here $|A|=4\times 51\times\cdots\times(51-19+1)$, $|A\cap B| = 1\times 3\times
 
 <p><a
 href="javascript:hideShow('lab29')"><b>Hint:</b></a><div
-class="ans" id="lab29"></div></p>
+class="ans" id="lab29"><center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/ballex.png"></th>
+</tr>
+<tr>
+<th>Label the arrows with probabilities and use total theorem of probability</th>
+</tr>
+</table>
+</center></div></p>
 
 </p>
 ::<p>
