--- a/prob1_2024/bayes.html
+++ b/prob1_2024/bayes.html
@@ -1794,7 +1794,7 @@ class="ans" id="lab37"></div></p>
 
 <p><a
 href="javascript:hideShow('lab38')"><b>Hint:</b></a><div
-class="ans" id="lab38"></div></p>
+class="ans" id="lab38">$\frac{5}{1+2+\cdots+10}.$</div></p>
 
 </p>
 ::<p>
@@ -1811,7 +1811,19 @@ class="ans" id="lab38"></div></p>
 
 <p><a
 href="javascript:hideShow('lab39')"><b>Hint:</b></a><div
-class="ans" id="lab39"></div></p>
+class="ans" id="lab39">
+Let $A$  be any sequence of distinct  cards
+ other than the ace of spades.  Then by a strategy we mean any subset $B\subseteq A$ such that no
+  element of $B$  occurs as a prefix in another distinct element. 
+ The interpretation is that we say "next" after sequence of cards seen so far matches some element of $B.$  
+<p></p>
+Now use the hint given. 
+<p></p>
+Another technique (possibly an easier one) is to consider the deck as made of one ace of spade and
+ 51 identical dummy cards.  
+</div></p>
+
+<p></p>
 
 </p>
 ::<p>
