--- a/prob1_2024/rv.html
+++ b/prob1_2024/rv.html
@@ -30,7 +30,7 @@ hideShow = function(lb) {
    if(me.style.display=="block"){
      me.style.display="none";
    }
-   else if (me.style.display=="none"){
+   else {
      me.style.display="block";
    }
 }
@@ -72,13 +72,17 @@ $.getJSON("https://api.flickr.com/services/rest/?method=flickr.photos.getInfo&ap
   });
 </script>
 <style>
-body {
+body,table {
   margin: 0;
   font-size: 40;
   //background: #000;
   //color: #fff;
 }
 
+.ans {
+  display:none;
+  background: #ccffcc;
+}
 
 .sticky {
   position: fixed;
@@ -97,6 +101,7 @@ body {
 }
 
 .scrpt {
+  margin:10px;
   border-left: 5px solid black;
 }
 
@@ -239,7 +244,7 @@ P(X=10) = P\big\{w\in\{head,tail\}~:~X(w)=10\big\}.
 $$
 Now $\big\{w\in\{head,tail\}~:~X(w)=10\big\} = \{head\},$ and so
 the problem now reduces to finding $P(\{head\}),$ which is $\frac 12.$
- ///
+ ■
 </p>
 
 <p></p>
@@ -281,7 +286,7 @@ find $P(X\in A).$
 <p></p>
 <b>SOLUTION:</b>
 Here $X ^{-1}(A) = \{2,4,6\}.$ So $P(X=10) = P(\{2,4,6\}) = \frac 16+\frac 16+\frac 16 = \frac 12.$
- ///
+ ■
 </p>
 
 <p></p>
@@ -338,7 +343,7 @@ to ${\mathbb R}.$ For example, $X(head,4) = 10$
 and $Y(head,4) = 4-3 = 1.$
 <p></p>
 Now it is meaningful to talk about $X+Y.$
- ///
+ ■
 </p>
 
 <p></p>
@@ -807,7 +812,7 @@ each.
 
 <p></p>
 So $E(Y) = \frac 12.$
- ///
+ ■
 </p>
 
 <p></p>
@@ -923,7 +928,7 @@ Then consider a random variable $X$ that takes values
 in ${\mathbb N}$ and $P(X=n)=\frac{1}{cn^2}.$ 
 <p></p>
 Then $E(X) = \frac 1c\sum\frac 1n=\infty.$
- ///
+ ■
 </p>
 By the way, if $X$ can take values $x_1,x_2,...$, there
 is no guaranty that $E(X)$ will equal any of
@@ -947,8 +952,7 @@ Trivial.
 </p>
 
 <p></p>
-
-<p>
+::<p>
 <b>EXERCISE 1:</b>&nbsp;
 If $E(X) = \mu,$ then what is $E(X-\mu)?$
 </p>
@@ -1049,15 +1053,208 @@ that both exist finitely.</p>
 
 <h1><a
 name="Problems for practice">Problems for practice</a></h1>
-
-<ol type="">
-
-<li>
+::<p>
+<b>EXERCISE 3:</b>&nbsp;
 What is $E(X)$ if $X$ takes the
-values $1,2,...,n$ with probability $\frac 1n$ each.</li>
+values $1,2,...,n$ with probability $\frac 1n$ each?
+<p><a
+href="javascript:hideShow('lab1')"><b>Hint:</b></a><div
+class="ans" id="lab1">$\frac{n+1}{2}.$</div></p>
 
-<li>
-<center>
+</p>
+::<p>
+<b>EXERCISE 4:</b>&nbsp;For a group of $n$  people find the expected number of days of the year which are
+ birthdays of exactly $k$  people. (Assume 365 days and that all arrangements are equally
+ probable.) Also find the expected number of multiple birthdays. How large should $n$  be to
+ make this expectation exceed 1?</p>
+::<p>
+<b>EXERCISE 5:</b>&nbsp;A man with $n$  keys wants to open a door (where exactly one keys works). He tries the
+ keys independently at random. Find the expected number of trials needed to open the door if 
+ keys are tried (a) with replacement (b) without replacement.</p>
+::<p>
+<b>EXERCISE 6:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossrv1.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 7:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossrv2.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 8:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossrv3.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 9:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossrv4.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 10:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossrv5.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 11:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossrv6.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 12:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossrv7.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 13:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossrv8.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 14:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossrv9.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 15:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossrv11.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 16:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossrv12.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 17:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossrv13.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 18:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/rossrv14.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+
+<p></p>
+::<p>
+<b>EXERCISE 19:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/fellrv1.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 20:</b>&nbsp;<center>
+<table width="100%">
+<tr>
+<th><img width="" src="image/fellrv2.png"></th>
+</tr>
+<tr>
+<th></th>
+</tr>
+</table>
+</center>
+</p>
+::<p>
+<b>EXERCISE 21:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most4.png"></th>
@@ -1067,10 +1264,9 @@ values $1,2,...,n$ with probability $\frac 1n$ each.</li>
 </tr>
 </table>
 </center>
-</li>
-
-<li>
-<center>
+</p>
+::<p>
+<b>EXERCISE 22:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most6.png"></th>
@@ -1080,10 +1276,9 @@ values $1,2,...,n$ with probability $\frac 1n$ each.</li>
 </tr>
 </table>
 </center>
-</li>
-
-<li>
-<center>
+</p>
+::<p>
+<b>EXERCISE 23:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most14.png"></th>
@@ -1093,10 +1288,20 @@ values $1,2,...,n$ with probability $\frac 1n$ each.</li>
 </tr>
 </table>
 </center>
-</li>
 
-<li>
-<center>
+<p><a
+href="javascript:hideShow('lab2')"><b>Hint:</b></a><div
+class="ans" id="lab2">Let $X = $ the number of trials needed to get the first 6. 
+<p></p>
+Then $P(X=k) = \left(\frac 56\right)^{k-1}\frac 16$  for $k=1,2,3,....$
+<p></p>
+So $E(X) = \sum_{k=1}^\infty k \left(\frac 56\right)^{k-1}\frac 16.$
+<p></p>
+</div></p>
+
+</p>
+::<p>
+<b>EXERCISE 24:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most15.png"></th>
@@ -1106,10 +1311,9 @@ values $1,2,...,n$ with probability $\frac 1n$ each.</li>
 </tr>
 </table>
 </center>
-</li>
-
-<li>
-<center>
+</p>
+::<p>
+<b>EXERCISE 25:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most34.png"></th>
@@ -1119,10 +1323,9 @@ values $1,2,...,n$ with probability $\frac 1n$ each.</li>
 </tr>
 </table>
 </center>
-</li>
-
-<li>
-<center>
+</p>
+::<p>
+<b>EXERCISE 26:</b>&nbsp;<center>
 <table width="100%">
 <tr>
 <th><img width="" src="image/most40.png"></th>
@@ -1132,9 +1335,9 @@ values $1,2,...,n$ with probability $\frac 1n$ each.</li>
 </tr>
 </table>
 </center>
-</li>
+</p>
 
-</ol>
+<p></p>
 
 <h3>Comments</h3>
 To post an anonymous comment, click on the "Name" field. This
